; ModuleID = '/home/carl/AnghaBench/linux/drivers/devfreq/event/extr_rockchip-dfi.c_rockchip_dfi_disable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/devfreq/event/extr_rockchip-dfi.c_rockchip_dfi_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.devfreq_event_dev = type { i32 }
%struct.rockchip_dfi = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.devfreq_event_dev*)* @rockchip_dfi_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rockchip_dfi_disable(%struct.devfreq_event_dev* %0) #0 {
  %2 = alloca %struct.devfreq_event_dev*, align 8
  %3 = alloca %struct.rockchip_dfi*, align 8
  store %struct.devfreq_event_dev* %0, %struct.devfreq_event_dev** %2, align 8
  %4 = load %struct.devfreq_event_dev*, %struct.devfreq_event_dev** %2, align 8
  %5 = call %struct.rockchip_dfi* @devfreq_event_get_drvdata(%struct.devfreq_event_dev* %4)
  store %struct.rockchip_dfi* %5, %struct.rockchip_dfi** %3, align 8
  %6 = load %struct.devfreq_event_dev*, %struct.devfreq_event_dev** %2, align 8
  %7 = call i32 @rockchip_dfi_stop_hardware_counter(%struct.devfreq_event_dev* %6)
  %8 = load %struct.rockchip_dfi*, %struct.rockchip_dfi** %3, align 8
  %9 = getelementptr inbounds %struct.rockchip_dfi, %struct.rockchip_dfi* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @clk_disable_unprepare(i32 %10)
  ret i32 0
}

declare dso_local %struct.rockchip_dfi* @devfreq_event_get_drvdata(%struct.devfreq_event_dev*) #1

declare dso_local i32 @rockchip_dfi_stop_hardware_counter(%struct.devfreq_event_dev*) #1

declare dso_local i32 @clk_disable_unprepare(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
